crates/bijux-planner-fastq/tests/snapshots/plan_snapshots__fastq_default_pipeline_plan.snap
---
source: crates/bijux-planner-fastq/tests/plan_snapshots.rs
expression: plan
---
{
  "schema_version": "bijux.execution_plan.v1",
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-planner-fastq.v1",
  "policy": "prefer_accuracy",
  "stages": [
    {
      "stage_id": "fastq.detect_adapters",
      "stage_version": 1,
      "tool_id": "fastqc",
      "tool_version": "0.0.0",
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "command": {
        "template": [
          "echo"
        ]
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "fastqc_dir",
            "path": "out/detect_adapters/fastqc/fastqc"
          }
        ]
      },
      "out_dir": "out/detect_adapters/fastqc",
      "params": {
        "input": "reads_R1.fastq.gz",
        "out_dir": "out/detect_adapters/fastqc",
        "sample_reads": 100000,
        "tool": "fastqc"
      },
      "effective_params": {
        "paired_mode": "single_end",
        "sample_reads": 100000,
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool fastqc selected by planner",
        "details": {}
      }
    },
    {
      "stage_id": "fastq.filter",
      "stage_version": 1,
      "tool_id": "fastp",
      "tool_version": "0.0.0",
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "command": {
        "template": [
          "echo"
        ]
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "out/trim/fastp/fastp.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "filtered_reads",
            "path": "out/filter/fastp/fastp.fastq.gz"
          }
        ]
      },
      "out_dir": "out/filter/fastp",
      "params": {
        "entropy_threshold": null,
        "input": "out/trim/fastp/fastp.fastq.gz",
        "kmer_ref": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": null,
        "output": "out/filter/fastp/fastp.fastq.gz",
        "polyx_policy": null,
        "redundant_filters": [],
        "tool": "fastp"
      },
      "effective_params": {
        "contaminant_db": null,
        "entropy_threshold": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": null,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool fastp selected by planner",
        "details": {}
      }
    },
    {
      "stage_id": "fastq.qc_post",
      "stage_version": 1,
      "tool_id": "multiqc",
      "tool_version": "0.0.0",
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "command": {
        "template": [
          "echo"
        ]
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "out/filter/fastp/fastp.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "multiqc_report",
            "path": "out/qc_post/multiqc/multiqc_report.html"
          },
          {
            "name": "multiqc_data",
            "path": "out/qc_post/multiqc/multiqc_data"
          }
        ]
      },
      "out_dir": "out/qc_post/multiqc",
      "params": {
        "input": "out/filter/fastp/fastp.fastq.gz",
        "out_dir": "out/qc_post/multiqc",
        "raw_r1": "reads_R1.fastq.gz",
        "tool": "multiqc"
      },
      "effective_params": {
        "paired_mode": "single_end",
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool multiqc selected by planner",
        "details": {}
      }
    },
    {
      "stage_id": "fastq.stats_neutral",
      "stage_version": 1,
      "tool_id": "seqkit_stats",
      "tool_version": "0.0.0",
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "command": {
        "template": [
          "echo"
        ]
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "out/filter/fastp/fastp.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "stats_json",
            "path": "out/stats_neutral/seqkit_stats/stats.json"
          }
        ]
      },
      "out_dir": "out/stats_neutral/seqkit_stats",
      "params": {
        "input": "out/filter/fastp/fastp.fastq.gz",
        "out_dir": "out/stats_neutral/seqkit_stats",
        "tool": "seqkit_stats"
      },
      "effective_params": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool seqkit_stats selected by planner",
        "details": {}
      }
    },
    {
      "stage_id": "fastq.trim",
      "stage_version": 1,
      "tool_id": "fastp",
      "tool_version": "0.0.0",
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "command": {
        "template": [
          "echo"
        ]
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads",
            "path": "out/trim/fastp/fastp.fastq.gz"
          }
        ]
      },
      "out_dir": "out/trim/fastp",
      "params": {
        "input": "reads_R1.fastq.gz",
        "output": "out/trim/fastp/fastp.fastq.gz",
        "tool": "fastp"
      },
      "effective_params": {
        "adapter_policy": "none",
        "contaminant_policy": null,
        "min_len": 0,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "q_cutoff": null,
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool fastp selected by planner",
        "details": {}
      }
    },
    {
      "stage_id": "fastq.validate_pre",
      "stage_version": 1,
      "tool_id": "fastqvalidator_official",
      "tool_version": "0.0.0",
      "image": {
        "image": "bijux/test",
        "digest": "sha256:plan"
      },
      "command": {
        "template": [
          "echo"
        ]
      },
      "resources": {
        "runtime": "docker",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "path": "out/validate_pre/fastqvalidator_official/validation.json"
          }
        ]
      },
      "out_dir": "out/validate_pre/fastqvalidator_official",
      "params": {
        "input": "reads_R1.fastq.gz",
        "out_dir": "out/validate_pre/fastqvalidator_official",
        "tool": "fastqvalidator_official"
      },
      "effective_params": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool fastqvalidator_official selected by planner",
        "details": {}
      }
    }
  ],
  "edges": [
    {
      "from": "fastq.detect_adapters",
      "to": "fastq.trim"
    },
    {
      "from": "fastq.filter",
      "to": "fastq.stats_neutral"
    },
    {
      "from": "fastq.stats_neutral",
      "to": "fastq.qc_post"
    },
    {
      "from": "fastq.trim",
      "to": "fastq.filter"
    },
    {
      "from": "fastq.validate_pre",
      "to": "fastq.detect_adapters"
    }
  ]
}
