crates/bijux-planner-fastq/tests/snapshots/plan_snapshots__fastq_plan_snapshot.snap
---
source: crates/bijux-planner-fastq/tests/plan_snapshots.rs
expression: plan
---
{
  "schema_version": "bijux.execution_plan.v1",
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-planner-fastq.v1",
  "policy": "prefer_accuracy",
  "stages": [
    {
      "stage_id": "fastq.trim",
      "stage_version": 1,
      "tool_id": "fastp",
      "tool_version": "0.23.4",
      "image": {
        "image": "bijux/fastp",
        "digest": "sha256:fastp"
      },
      "command": {
        "template": [
          "fastp"
        ]
      },
      "resources": {
        "runtime": "short",
        "mem_gb": 2,
        "tmp_gb": 1,
        "threads": 2
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads",
            "path": "out/trim/fastp/fastp.fastq.gz"
          }
        ]
      },
      "out_dir": "out/trim/fastp",
      "params": {
        "input": "reads_R1.fastq.gz",
        "output": "out/trim/fastp/fastp.fastq.gz",
        "tool": "fastp"
      },
      "effective_params": {
        "adapter_policy": "none",
        "contaminant_policy": null,
        "min_len": 0,
        "n_policy": null,
        "paired_mode": "single_end",
        "polyx_policy": null,
        "q_cutoff": null,
        "threads": 2
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool fastp selected by planner",
        "details": {}
      }
    },
    {
      "stage_id": "fastq.validate_pre",
      "stage_version": 1,
      "tool_id": "fastqvalidator_official",
      "tool_version": "1.0.0",
      "image": {
        "image": "bijux/fastqvalidator",
        "digest": "sha256:fastqvalidator"
      },
      "command": {
        "template": [
          "fastqvalidator"
        ]
      },
      "resources": {
        "runtime": "short",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "path": "out/validate_pre/fastqvalidator_official/validation.json"
          }
        ]
      },
      "out_dir": "out/validate_pre/fastqvalidator_official",
      "params": {
        "input": "reads_R1.fastq.gz",
        "out_dir": "out/validate_pre/fastqvalidator_official",
        "tool": "fastqvalidator_official"
      },
      "effective_params": {
        "paired_mode": "single_end",
        "q_cutoff": null,
        "threads": 1
      },
      "aux_images": {},
      "reason": {
        "kind": "default",
        "summary": "tool fastqvalidator_official selected by planner",
        "details": {}
      }
    }
  ],
  "edges": [
    {
      "from": "fastq.validate_pre",
      "to": "fastq.trim"
    }
  ]
}
